deploy/digital-twin/service-vorto-converter.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: vorto-converter
  labels:
    app.kubernetes.io/name: vorto-converter
    app.kubernetes.io/part-of: digital-twin
    networking.knative.dev/visibility: cluster-local
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/scaleToZeroPodRetentionPeriod: "5m"
    spec:
      containers:
        - image: ghcr.io/drogue-iot/vorto-converter:0.1.1
          env:
            - name: QUARKUS_LOG_LEVEL
              value: DEBUG
            - name: APIKEY_VORTO
              valueFrom:
                secretKeyRef:
                  name: vorto-api
                  key: token
                  optional: true
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 128Mi
