deploy/digital-twin/service.yaml
kind: Service
apiVersion: v1
metadata:
 labels:
   app: ditto-nginx-external
 name: ditto-nginx-external
spec:
  selector:
    app.kubernetes.io/instance: nginx-ditto
    app.kubernetes.io/name: nginx
  type: NodePort
  ports:
    - name: endpoint
      protocol: TCP
      port: 80
      targetPort: 8080
