deploy/digital-twin/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ditto
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ditto-nginx
                port:
                  name: http
